@@ -6,8 +6,8 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -17,18 +17,22 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins>            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <release>11</release>
-                </configuration>
-            </plugin>
+        <plugins>            
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>com.conway/com.conway.ConwayApp</mainClass>
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED</option>
+                        <option>-Xmx1024m</option>
+                    </options>
+                    <jlinkImageName>conway</jlinkImageName>
+                    <jlinkZipName>conway</jlinkZipName>
+                    <launcher>conway=com.conway/com.conway.ConwayApp</launcher>
+                </configuration>
                 <executions>
                     <execution>
                         <!-- Default configuration for running -->
@@ -36,7 +40,6 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.conway.ConwayApp</mainClass>
-                            <appArgs>${appArgs}</appArgs>
                         </configuration>
                     </execution>
                 </executions>
